SFA-1162 - additional fixes for shifting in forecast worksheets

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -159,6 +159,9 @@ table.dataTable {
           span {
             overflow: visible;
           }
+          &.editableColumn {
+            max-width: 80px;
+          }
         }
         &:last-child {
           max-width: 60px;
